# MemSieve

./: .gitignore  CMakeLists.txt  README.md  memsieve.py  requirements.txt  setup.sh
fuzzer/: mutator.py  utils.py
src/: main.cpp  tracer.cpp  tracer.h
tests/: mem_vault.c  vulnerable_app.c
tui/: app.py
